feat: 初步添加monitor接口
