# docs/swagger.yaml
@@ -10,6 +10,43 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/monitor:
+    get:
+      consumes:
+      - application/json
+      description: 获取监控数据
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.ResponseHTTP'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/controller.ResponseHTTP'
+      summary: 获取监控数据
+      tags:
+      - 获取监控数据
+    post:
+      consumes:
+      - application/json
+      description: 添加监控数据
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.ResponseHTTP'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/controller.ResponseHTTP'
+      summary: 添加监控数据
+      tags:
+      - 添加监控数据
   /v1/region:
     get:
       consumes:
